--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -1,40 +1,38 @@
+<table class="table table-condensed"> 
+  <thead>
+    <tr class="control-group" >
+      <td> <%= f.label :first_name, :class => 'help-inline' %> <%= f.text_field :first_name, :class => 'text_field'%> </td>
+      <td> <%= f.label :last_name, :class => 'help-inline' %> <%= f.text_field :last_name, :class => 'text_field'%> </td>
+    </tr>
 
+    <tr class="control-group" >
+      <td> <%= f.label :address, :class => 'help-inline' %> <%= f.text_field :address, :class => 'text_field'%> </td>
+      <td> <%= f.label :city, :class => 'help-inline' %> <%= f.text_field :city, :class => 'text_field input-medium'%> </td>
+    </tr>
+    <tr class="control-group" >
+      <td> <%= f.label :state, :class => 'help-inline' %> <%= f.text_field :state, :class => 'text_field input-medium'%> </td>
+      <td> <%= f.label :country, :class => 'help-inline' %> <%= f.text_field :country, :class => 'text_field input-medium'%> </td>
+    </tr>
+    <tr class="control-group">  
+      <td colspan="2"> <%= f.label :zip, :class => 'help-inline' %> <%= f.text_field :zip, :class => 'text_field input-small'%> </td> 
+    </tr>
+    <tr class="control-group" >
+      <td> <%= f.label :home_phone, :class => 'help-inline' %> <%= f.text_field :home_phone, :class => 'text_field input-medium'%> </td>
+      <td> <%= f.label :work_phone, :class => 'help-inline' %> <%= f.text_field :work_phone, :class => 'text_field input-medium'%> </td>
+    </tr>  
+    <tr class="control-group" >
+      <td colspan="2"> <%= f.label :email, :class => 'help-inline' %> <%= f.text_field :email, :class => 'text_field'%> </td>
+    </tr>  
+    <tr class="control-group" >
+      <td colspan="2"> 
+        <%= f.label :terms_of_membership_id, :class => 'help-inline' %> 
+        <%= f.text_field :terms_of_membership_id, :class => 'text_field'%> 
+      </td>
+    </tr>  
 
-<div class = "box"> 
-  <p>   
-
-  </p>
-  <div class="control-group" >
-    <%= f.label :first_name, :class => 'help-inline' %> <%= f.text_field :first_name, :class => 'text_field'%> 
-    <%= f.label :last_name, :class => 'help-inline' %> <%= f.text_field :last_name, :class => 'text_field'%>
-  </div>
-  <hr>
-  <div class="control-group" >
-    <%= f.label :address, :class => 'help-inline' %> <%= f.text_field :address, :class => 'text_field'%> 
-    <%= f.label :city, :class => 'help-inline' %> <%= f.text_field :city, :class => 'text_field input-medium'%>
-  </div>
-  <div class="control-group" >
-    <%= f.label :state, :class => 'help-inline' %> <%= f.text_field :state, :class => 'text_field input-medium'%> 
-    <%= f.label :country, :class => 'help-inline' %> <%= f.text_field :country, :class => 'text_field input-medium'%>
-    <%= f.label :zip, :class => 'help-inline' %> <%= f.text_field :zip, :class => 'text_field input-small'%>
-  </div>
-  <hr>
-  <div class="control-group" >
-    <%= f.label :home_phone, :class => 'help-inline' %> <%= f.text_field :home_phone, :class => 'text_field input-medium'%>
-    <%= f.label :work_phone, :class => 'help-inline' %> <%= f.text_field :work_phone, :class => 'text_field input-medium'%>
-  </div>  
-  <div class="control-group" >
-    <%= f.label :email, :class => 'help-inline' %> <%= f.text_field :email, :class => 'text_field'%> 
-  </div>  
-  <hr>
-  <div class="control-group" >
-    <%= f.label :terms_of_membership_id, :class => 'help-inline' %> <%= f.text_field :terms_of_membership_id, :class => 'text_field'%> 
-  </div>  
-  <hr>
-
-  <div class="control-group">
-    <%= f.submit nil, :class => 'btn btn-primary' %>
-    <%= link_to t(:Cancel), members_path, :class => 'btn' %>
-  </div>
-</div>
-
+    <tr class="control-group">
+      <th colspan="2"> <%= f.submit nil, :class => 'btn btn-primary' %>
+      <%= link_to t(:Cancel), members_path, :class => 'btn' %> </th>
+    </tr>
+  <thead>
+</table>
