#18533 - Added select tag for TOMs in form

--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -26,7 +26,7 @@
     <tr class="control-group" >
       <td colspan="2"> 
         <%= f.label :terms_of_membership_id, :class => 'help-inline' %> 
-        <%= f.text_field :terms_of_membership_id, :class => 'text_field'%> 
+        <%= f.select :terms_of_membership_id, options_from_collection_for_select(@terms_of_membership, "id", "trial_days") %> 
       </td>
     </tr>  
 
