--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -1,31 +1,61 @@
 <table class="table table-condensed"> 
   <thead>
     <tr class="control-group" >
-      <td> <%= f.label :first_name, :class => 'help-inline' %> <%= f.text_field :first_name, :class => 'text_field'%> </td>
-      <td> <%= f.label :last_name, :class => 'help-inline' %> <%= f.text_field :last_name, :class => 'text_field'%> </td>
+      <td> 
+        <%= f.label :url, t('url'), :class => 'help-inline' %> 
+        <%= f.text_field :first_name, :class => 'text_field'%>
+      </td>
+      <td> 
+        <%= f.label :last_name,t('activerecord.attributes.member.last_name'), :class => 'help-inline' %> 
+        <%= f.text_field :last_name, :class => 'text_field'%> 
+      </td>
     </tr>
 
     <tr class="control-group" >
-      <td> <%= f.label :address, :class => 'help-inline' %> <%= f.text_field :address, :class => 'text_field'%> </td>
-      <td> <%= f.label :city, :class => 'help-inline' %> <%= f.text_field :city, :class => 'text_field input-medium'%> </td>
+      <td> 
+        <%= f.label :address, t('activerecord.attributes.member.address'), :class => 'help-inline' %> 
+        <%= f.text_field :address, :class => 'text_field'%> 
+      </td>
+      <td> 
+        <%= f.label :city, t('activerecord.attributes.member.city'), :class => 'help-inline' %> 
+        <%= f.text_field :city, :class => 'text_field input-medium'%>
+      </td>
     </tr>
     <tr class="control-group" >
-      <td> <%= f.label :state, :class => 'help-inline' %> <%= f.text_field :state, :class => 'text_field input-medium'%> </td>
-      <td> <%= f.label :country, :class => 'help-inline' %> <%= f.text_field :country, :class => 'text_field input-medium'%> </td>
+      <td> 
+        <%= f.label :state, t('activerecord.attributes.member.state'), :class => 'help-inline' %> 
+        <%= f.text_field :state, :class => 'text_field input-medium'%> 
+      </td>
+      <td> 
+        <%= f.label :country,t('activerecord.attributes.member.country'), :class => 'help-inline' %> 
+        <%= f.text_field :country, :class => 'text_field input-medium'%> 
+      </td>
     </tr>
     <tr class="control-group">  
-      <td colspan="2"> <%= f.label :zip, :class => 'help-inline' %> <%= f.text_field :zip, :class => 'text_field input-small'%> </td> 
+      <td colspan="2"> 
+        <%= f.label :zip, t('activerecord.attributes.member.zip'), :class => 'help-inline' %> 
+        <%= f.text_field :zip, :class => 'text_field input-small'%> 
+      </td> 
     </tr>
     <tr class="control-group" >
-      <td> <%= f.label :home_phone, :class => 'help-inline' %> <%= f.text_field :home_phone, :class => 'text_field input-medium'%> </td>
-      <td> <%= f.label :work_phone, :class => 'help-inline' %> <%= f.text_field :work_phone, :class => 'text_field input-medium'%> </td>
-    </tr>  
-    <tr class="control-group" >
-      <td colspan="2"> <%= f.label :email, :class => 'help-inline' %> <%= f.text_field :email, :class => 'text_field'%> </td>
+      <td> 
+        <%= f.label :home_phone, t('activerecord.attributes.member.home_phone'), :class => 'help-inline' %>
+        <%= f.text_field :home_phone, :class => 'text_field input-medium'%> 
+      </td>
+      <td> 
+        <%= f.label :work_phone, t('activerecord.attributes.member.work_phone'), :class => 'help-inline' %> 
+        <%= f.text_field :work_phone, :class => 'text_field input-medium'%> 
+      </td>
     </tr>  
     <tr class="control-group" >
       <td colspan="2"> 
-        <%= f.label :terms_of_membership_id, :class => 'help-inline' %> 
+        <%= f.label :email, t('email'), :class => 'help-inline' %> 
+        <%= f.text_field :email, :class => 'text_field'%> 
+      </td>
+    </tr>  
+    <tr class="control-group" >
+      <td colspan="2"> 
+        <%= f.label :terms_of_membership_id, t('activerecord.attributes.member.therms_of_membership_id'), :class => 'help-inline' %> 
         <%= f.select :terms_of_membership_id, options_from_collection_for_select(@terms_of_membership, "id", "trial_days") %> 
       </td>
     </tr>  
