--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,12 @@
   <div><%= f.label :username %><br />
   <%= f.text_field :username %></div>
 
+  <div><%= f.label :first_name %><br />
+  <%= f.text_field :first_name %></div>
+
+  <div><%= f.label :last_name %><br />
+  <%= f.text_field :last_name %></div>
+
   <div><%= f.label :email %><br />
   <%= f.email_field :email %></div>
 
