Fixed syntaxis and added validation for email

--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -2,7 +2,7 @@
   <thead>
     <tr class="control-group" >
       <td> 
-        <%= f.label :url, t('activerecord.attributes.member.demographic.first_name'), :class => 'help-inline' %> 
+        <%= f.label :first_name, t('activerecord.attributes.member.demographic.first_name'), :class => 'help-inline' %> 
         <%= f.text_field :first_name, :class => 'text_field'%>
       </td>
       <td> 
