--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @member.full_name %></h1>
+<h1> <%= @member.visible_id %> - <%= @member.full_name %></h1>
 <table class="table table-bordered">
   <tr>
     <td>
@@ -13,20 +13,7 @@
     </td>
   </tr>
   <tr>
-    <td> <%= t('activerecord.attributes.member.demographic.first_name') %> </td>
-    <td> <%= t('activerecord.attributes.member.demographic.last_name') %> </td>
-    <td> <%= t('activerecord.attributes.member.demographic.address') %> </td>
-    <td> <%= t('activerecord.attributes.member.demographic.city') %> </td>
-    <td> <%= t('activerecord.attributes.member.demographic.state') %> </td>
-    <td> <%= t('activerecord.attributes.member.demographic.zip') %> </td>
-  </tr>
-  <tr>
-    <td> <%= @member.first_name %> </td>
-    <td> <%= @member.last_name %> </td>
-    <td> <%= @member.address %> </td>
-    <td> <%= @member.city %> </td>
-    <td> <%= @member.state %> </td>
-    <td> <%= @member.zip %> </td>
+    <td> <%= @member.full_address %></td>
   </tr>
 </table>
 
@@ -34,15 +21,9 @@
   <tr> 
     <td> Contact Information </td>
   </tr>
-  <tr>
-    <td> <%= t('activerecord.attributes.member.contact.phone_number') %> </td>
-    <td> <%= t('activerecord.attributes.member.contact.work_number') %> </td>
-    <td> <%= t('email') %> </td>
-  </tr>
     <tr>
-    <td> <%= @member.phone_number %> </td>
-    <td> <%= @member.work_number %> </td>
-    <td> <%= @member.email %> </td>
+    <td> <%= t('activerecord.attributes.member.contact.phone_number') %>: <%= @member.phone_number %> </td>
+    <td> <%= t('email') %>: <%= @member.email %> </td>
   </tr>
 </table>
 
@@ -51,7 +32,6 @@
     <td> Membership Information </td>
   </tr>
   <tr>
-    <td> <%= t('activerecord.attributes.member.membership.member_id') %> </td>
     <td> <%= t('activerecord.attributes.member.membership.current_status') %> </td>
     <td> <%= t('activerecord.attributes.member.membership.member_since_date') %> </td>
     <td> <%= t('activerecord.attributes.member.membership.join_date') %> </td>
@@ -59,7 +39,6 @@
     <td> <%= t('activerecord.attributes.member.membership.cancel_date') %> </td>
   </tr>
     <tr>
-    <td> <%= @member.id %> </td>
     <td> <%= @member.status %> </td>
     <td> <%= @member.created_at %> </td>
     <td> <%= @member.join_date %> </td>
