improvements on header menu. added link on club name to go to members search

--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -29,7 +29,7 @@
 
 <table class="table table-bordered"> 
   <tr> 
-    <td> Membership Information </td>
+    <td colspan="5"> Membership Information </td>
   </tr>
   <tr>
     <td> <%= t('activerecord.attributes.member.membership.current_status') %> </td>
