--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -54,7 +54,7 @@
         <tr class="control-group" >
           <td> 
             <%= f.label :encrypted_number, t('encrypted_number'), :class => 'help-inline' %> 
-            <%= text_field :credit_card, :encrypted_number, :class => 'text_field input-medium'%> 
+            <%= text_field :credit_card, :number, :class => 'text_field input-medium'%> 
           <td> 
             <%= f.label :expire_month, t('expire_month'), :class => 'help-inline' %> 
             <%= text_field :credit_card, :expire_month, :class => 'text_field input-medium'%>
@@ -65,7 +65,7 @@
     </tr> 
     <% end %>
 
-    <%= hidden_field_tag :enrollment_amount, 2.0 %>
+    <%= hidden_field_tag :enrollment_amount, 0.0 %>
     <%= f.hidden_field :country, :value => "US" %>
 
     <tr class="control-group">
