--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -59,14 +59,15 @@
   </tr>
 </table>
 
-<table class="table table-bordered">
-  <tr>
-    <td>
-      <%= link_to "Add a note", "#", :class => "btn btn-warning" %>
+<ul class="nav nav-tabs">
+  <li><a href="#operations" data-toggle="tab">Operations</a></li>
+  <li><a href="#notes" data-toggle="tab">Notes</a></li>
+  <li><a href="#credit_cards" data-toggle="tab">Credit Cards</a></li>
+</ul>
 
-      ...Notes..</td>
-  </tr>
-</table>
+<div class="tab-content">
+  <div class="tab-pane active" id="operations"><%= render :partial => 'operations', :locals => { :operations => @operations} %></div>
+  <div class="tab-pane" id="notes"><%= render :partial => 'notes', :locals => { :notes => @notes} %></div>
+  <div class="tab-pane" id="credit_cards"><%= render :partial => 'credit_cards', :locals => { :credit_cards => @credit_cards} %></div>  
+</div>
 
-
-<%= render :partial => 'operations', :locals => { :operations => @operations} %>
