--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -26,7 +26,7 @@
     </tr>
   </thead>  
   <tr>
-    <td> <%= t('activerecord.attributes.member.contact.phone_number') %>: <%= @member.phone_number %> </td>
+    <td> <%= t('activerecord.attributes.member.phone_number') %>: <%= @member.phone_number %> </td>
     <td> <%= t('email') %>: <%= @member.email %> </td>
   </tr>
 </table>
@@ -38,11 +38,11 @@
     </tr>
   </thead>  
   <tr>
-    <td> <%= t('activerecord.attributes.member.membership.current_status') %> </td>
-    <td> <%= t('activerecord.attributes.member.membership.member_since_date') %> </td>
-    <td> <%= t('activerecord.attributes.member.membership.join_date') %> </td>
-    <td> <%= t('activerecord.attributes.member.membership.next_bill_date') %> </td>
-    <td> <%= t('activerecord.attributes.member.membership.cancel_date') %> </td>
+    <td> <%= t('activerecord.attributes.member.current_status') %> </td>
+    <td> <%= t('activerecord.attributes.member.member_since_date') %> </td>
+    <td> <%= t('activerecord.attributes.member.join_date') %> </td>
+    <td> <%= t('activerecord.attributes.member.next_bill_date') %> </td>
+    <td> <%= t('activerecord.attributes.member.cancel_date') %> </td>
   </tr>
     <tr>
     <td> <%= @member.status %> </td>
