--- a/app/views/clubs/_form.html.erb
+++ b/app/views/clubs/_form.html.erb
@@ -12,6 +12,12 @@
       <%= f.text_area :description, :class => 'text_area' %>
     </div>
   </div>
+  <div class="control-group">
+    <%= f.label :logo, :class => 'control-label' %>
+    <div class="controls">
+      <%= f.file_field :logo, :class => 'text_field' %>
+    </div>
+  </div>
 
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
