--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -53,19 +53,19 @@
     <% if @member.new_record? %>
         <tr class="control-group" >
           <td> 
-            <%= f.label :encrypted_number, t('encrypted_number'), :class => 'help-inline' %> 
+            <%= f.label :encrypted_number, t('activerecord.attributes.credit_card.encrypted_number'), :class => 'help-inline' %> 
             <%= text_field :credit_card, :number, :class => 'text_field input-medium'%> 
           <td> 
-            <%= f.label :expire_month, t('expire_month'), :class => 'help-inline' %> 
+            <%= f.label :expire_month, t('activerecord.attributes.credit_card.expire_month'), :class => 'help-inline' %> 
             <%= text_field :credit_card, :expire_month, :class => 'text_field input-medium'%>
-            <%= f.label :expire_year, t('expire_year'), :class => 'help-inline' %> 
+            <%= f.label :expire_year, t('activerecord.attributes.credit_card.expire_year'), :class => 'help-inline' %> 
             <%= text_field :credit_card, :expire_year, :class => 'text_field input-small' %>
           </td>
         </tr>
     </tr> 
     <% end %>
 
-    <%= hidden_field_tag :enrollment_amount, 1 %> <!-- Changed to 1 from 0.0 -->
+    <%= hidden_field_tag :enrollment_amount, 0.0 %> <!-- Changed to 1 from 0.0 -->
     <%= f.hidden_field :country, :value => "US" %>
 
     <tr class="control-group">
