show amount on transaction list.

--- a/app/views/members/_transactions.html.erb
+++ b/app/views/members/_transactions.html.erb
@@ -12,6 +12,9 @@
     <td>
       <%= link_to transaction.response_result[0..50], "#" %>
     </td>
+    <td>
+      <%= number_to_currency transaction.amount  %>
+    </td>
   </tr>
   <% end %>
   
