Fixed cancel button. Now it goes back instead of member index

--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -77,7 +77,7 @@
 
     <tr class="control-group">
       <th colspan="2"> <%= f.submit nil, :class => 'btn btn-primary' %>
-      <%= link_to t(:Cancel), members_path, :class => 'btn' %> </th>
+      <%= link_to t(:Cancel), :back, :class => 'btn' %> </th>
     </tr>
   <thead>
 </table>
