--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -1,5 +1,6 @@
 <h1> <%= @member.visible_id %> - <%= @member.full_name %></h1>
-<table class="table table-bordered">
+
+<table class="table table-bordered table-condensed">
   <tr>
     <td>
       <%= link_to "Save the sale", "#", :class => "btn btn-warning" %>
@@ -15,11 +16,14 @@
     </td>
   </tr>
   <tr>
-    <td> <%= @member.full_address %></td>
+    <td> 
+      <i class ="icon-home" > </i> <%= @member.full_address %> 
+      <%= link_to t('show_on_map'), "http://maps.google.com/maps?f=q&q=#{h @member.full_address}&ie=UTF8&om=1", :target => '_blank' %>
+    </td>
   </tr>
 </table>
 
-<table class="table table-bordered"> 
+<table class="table table-bordered table-condensed"> 
   <thead>
     <tr> 
       <th colspan="2"> Contact Information </th>
@@ -31,7 +35,7 @@
   </tr>
 </table>
 
-<table class="table table-bordered"> 
+<table class="table table-bordered table-condensed"> 
   <thead>
     <tr> 
       <th colspan="5">Membership Information </th>
@@ -48,7 +52,7 @@
   </tr>
 </table>
 
-<table class="table table-bordered">
+<table class="table table-bordered table-condensed">
   <thead>
   <tr>
     <th colspan="5"> Active Credit card </th>
