--- a/app/views/members/_form.html.erb
+++ b/app/views/members/_form.html.erb
@@ -43,26 +43,26 @@
   </tr>  
 
   <% if @member.new_record? %>
-  <tr class="control-group" >
-    <td colspan="2"> 
-      <%= f.label :terms_of_membership_id, t('activerecord.attributes.member.terms_of_membership_id'), :class => 'help-inline' %> 
-      <%= select_tag :terms_of_membership_id, options_from_collection_for_select(@terms_of_membership, "id", "name") %> 
-    </td>
-  </tr>
-  <tr class="control-group" ><td colspan="2"> <b> Credit Card </b> </td></tr>  
+    <tr class="control-group" >
+      <td colspan="2"> 
+        <%= f.label :terms_of_membership_id, t('activerecord.attributes.member.terms_of_membership_id'), :class => 'help-inline' %> 
+        <%= select_tag :terms_of_membership_id, options_from_collection_for_select(@terms_of_membership, "id", "name") %> 
+      </td>
+    </tr>
+    <tr class="control-group" ><td colspan="2"> <b> Credit Card </b> </td></tr>  
 
 
-      <tr class="control-group" >
-        <td> 
-          <%= f.label :encrypted_number, t('activerecord.attributes.credit_card.encrypted_number'), :class => 'help-inline' %> 
-          <%= text_field :credit_card, :number, :class => 'text_field input-medium'%> 
-        <td> 
-          <%= f.label :expire_month, t('activerecord.attributes.credit_card.expire_month'), :class => 'help-inline' %> 
-          <%= text_field :credit_card, :expire_month, :class => 'text_field input-medium'%>
-          <%= f.label :expire_year, t('activerecord.attributes.credit_card.expire_year'), :class => 'help-inline' %> 
-          <%= text_field :credit_card, :expire_year, :class => 'text_field input-small' %>
-        </td>
-      </tr>
+    <tr class="control-group" >
+      <td> 
+        <%= f.label :encrypted_number, t('activerecord.attributes.credit_card.encrypted_number'), :class => 'help-inline' %> 
+        <%= text_field :credit_card, :number, :class => 'text_field input-medium'%> 
+      <td> 
+        <%= f.label :expire_month, t('activerecord.attributes.credit_card.expire_month'), :class => 'help-inline' %> 
+        <%= text_field :credit_card, :expire_month, :class => 'text_field input-medium'%>
+        <%= f.label :expire_year, t('activerecord.attributes.credit_card.expire_year'), :class => 'help-inline' %> 
+        <%= text_field :credit_card, :expire_year, :class => 'text_field input-small' %>
+      </td>
+    </tr>
   </tr> 
   <% end %>
   
@@ -71,6 +71,8 @@
     <%= link_to t(:Cancel), :back, :class => 'btn' %> </th>
   </tr>
 </table>
-      
-<%= hidden_field_tag :enrollment_amount, 0.0 %>
-<%= f.hidden_field :country, :value => "US" %>
+
+<% if @member.new_record? %>
+  <%= hidden_field_tag :enrollment_amount, 0.0 %>
+  <%= f.hidden_field :country, :value => "US" %>
+<% end %>
