ref#18778 - Added view of active credit card on member view and translations

--- a/app/views/members/_credit_cards.html.erb
+++ b/app/views/members/_credit_cards.html.erb
@@ -8,10 +8,10 @@
   <% credit_cards.each do |cc| %>
   <tr>
     <td>
-      <%= cc.number %>
+      <%= t('activerecord.attributes.credit_card.number') %>: <%= cc.number %>
     </td>
     <td>
-      <%= cc.expire_month %> / <%= cc.expire_year %>
+      <%= t('activerecord.attributes.credit_card.expire_date') %>: <%= cc.expire_month %> / <%= cc.expire_year %>
     </td>
   </tr>
   <% end %>
