ref#18781 - Added red color for expired credit cards

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,9 @@
 form .clearfix:before, form .clearfix:after {
   display: inline;
 }
+
+.card_expired{
+	color: #FFFFFF;
+	background-color: red;
+}
+	
