--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -55,17 +55,17 @@
   </tr>
 </table>
 
-<table class="table table-bordered table-condensed">
+<table id ="active_credit_card_table" class="table table-bordered table-condensed">
   <thead>
     <tr>
       <th colspan="5"> Active Credit card </th>
     </tr>
-  </thead>
   <tr>
     <td> <%= t("activerecord.attributes.credit_card.number") %> <%= @active_credit_card.number %> </td>
     <td> <%= t("activerecord.attributes.credit_card.expire_date") %> 
          <%= @active_credit_card.expire_month %> / <%= @active_credit_card.expire_year %> 
     </td>
+  </thead>
 </table>
 
 <ul class="nav nav-tabs">
@@ -81,3 +81,7 @@
   <div class="tab-pane" id="credit_cards"><%= render :partial => 'credit_cards', :locals => { :credit_cards => @credit_cards} %></div>  
   <div class="tab-pane" id="transactions"><%= render :partial => 'transactions', :locals => { :transactions => @transactions} %></div>  
 </div>
+
+<% if Time.now.month > @active_credit_card.expire_month && Time.now.year > @active_credit_card.expire_year %>
+<script> credit_card_expired = true </script>
+<% end %>
