--- a/app/views/members/_operations.html.erb
+++ b/app/views/members/_operations.html.erb
@@ -1,19 +1,29 @@
-<table class="table table-bordered">
+<table class="table table-bordered datatable_only_sorting">
   <thead>
     <tr>
-      <th colspan="2">Operations</th>
+      <th> Created by </th>
+      <th> Operation </th>
+      <th> Notes </th>
+      <th> Date </th>
     </tr>
   </thead>
-  <% operations.each do |operation| %>
-  <tr>
-    <td>
-      <%= I18n.l operation.operation_date, :format => :long %>
-    </td>
-    <td>
-      <%= link_to operation.description[0..50], "#" %>
-    </td>
-  </tr>
-  <% end %>
-  
+  <tbody>
+    <% operations.each do |operation| %>
+    <tr>
+      <td>
+        <%= operation.created_by.username %>
+      </td>
+      <td>
+        <%= link_to operation.description[0..50], "#" %>
+      </td>
+      <td>
+        <%= operation.notes[0..50] if operation.notes != nil %> 
+      </td>
+      <td>
+        <%= I18n.l operation.operation_date, :format => :long %>
+      </td>  
+    </tr>
+    <% end %>
+  </tbody>
 </table>
 <%= will_paginate operations %>
