--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -65,7 +65,13 @@
   </tr>
 </table>
 
-<table id ="active_credit_card_table" class="table table-bordered table-condensed">
+<table
+  <% if Time.now.month > @active_credit_card.expire_month && Time.now.year > @active_credit_card.expire_year %>
+    class="table table-bordered table-condensed card_expired"
+  <% else %>
+    class="table table-bordered table-condensed"
+  <% end %>
+>
   <thead>
     <tr>
       <th colspan="5"> Active Credit card </th>
@@ -92,6 +98,4 @@
   <div class="tab-pane" id="transactions"><%= render :partial => 'transactions', :locals => { :transactions => @transactions} %></div>  
 </div>
 
-<% if Time.now.month > @active_credit_card.expire_month && Time.now.year > @active_credit_card.expire_year %>
-<script> credit_card_expired = true </script>
-<% end %>
+
