--- a/app/views/members/_operations.html.erb
+++ b/app/views/members/_operations.html.erb
@@ -14,10 +14,10 @@
         <%= I18n.l operation.operation_date, :format => :long %>
       </td>  
       <td>
-        <%= link_to operation.description[0..50], operation_path(@current_partner.prefix,@current_club.name,@member.visible_id,:id => operation.id) %>
+        <%= link_to operation.description.truncate(50), operation_path(@current_partner.prefix,@current_club.name,@member.visible_id,:id => operation.id) %>
       </td>
       <td>
-        <%= operation.notes[0..50] if operation.notes != nil %> 
+        <%= operation.notes.truncate(30) if operation.notes != nil %> 
       </td>
       <td>
         <%= operation.created_by.username %>
